resolve some error of maintability